# ChangeLog for dev-libs/glib
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.296 2007/11/23 17:48:30 jer Exp $

  23 Nov 2007; Jeroen Roovers <jer@gentoo.org> glib-2.14.3.ebuild:
  Stable for HPPA (bug #198845).

  20 Nov 2007; Joshua Kinard <kumba@gentoo.org> glib-2.14.3.ebuild:
  Stable on mips, per #190019.

  19 Nov 2007; Markus Rothe <corsair@gentoo.org> glib-2.14.3.ebuild:
  Stable on ppc64; bug #198845

  17 Nov 2007; nixnut <nixnut@gentoo.org> glib-2.14.3.ebuild:
  Stable on ppc wrt bug 198845

  14 Nov 2007; Raúl Porcel <armin76@gentoo.org> glib-2.14.3.ebuild:
  sparc stable wrt #198845

  14 Nov 2007; Raúl Porcel <armin76@gentoo.org> glib-2.14.3.ebuild:
  alpha/ia64 stable wrt #198845

  13 Nov 2007; Christian Faulhammer <opfer@gentoo.org> glib-2.14.3.ebuild:
  stable x86, bug 198845

  12 Nov 2007; Samuli Suominen <drac@gentoo.org> glib-2.14.3.ebuild:
  amd64 stable wrt #198845

*glib-2.14.3 (09 Nov 2007)

  09 Nov 2007; Mart Raudsepp <leio@gentoo.org> -glib-2.14.1.ebuild,
  +glib-2.14.3.ebuild:
  Version bump

*glib-2.14.2 (16 Oct 2007)

  16 Oct 2007; Mart Raudsepp <leio@gentoo.org> +glib-2.14.2.ebuild:
  Version bump

*glib-2.14.1 (21 Sep 2007)

  21 Sep 2007; Rémi Cardona <remi@gentoo.org> +glib-2.14.1.ebuild:
  Add glib-2.14.1 (for Gnome 2.20)

  21 Sep 2007; Brent Baude <ranger@gentoo.org> glib-2.12.13.ebuild:
  Marking glib-2.12.13 ppc64 for bug#190019

  28 Aug 2007; nixnut <nixnut@gentoo.org> glib-2.12.13.ebuild:
  Stable on ppc wrt bug 190019

  28 Aug 2007; Jeroen Roovers <jer@gentoo.org> glib-2.12.13.ebuild:
  Stable for HPPA (bug #190019).

  25 Aug 2007; Raúl Porcel <armin76@gentoo.org> glib-2.12.13.ebuild:
  alpha/ia64/x86 stable wrt #190019

  24 Aug 2007; Wulf C. Krueger <philantrop@gentoo.org> glib-2.12.13.ebuild:
  Marked stable on amd64 as per bug 190019.

  24 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> glib-2.12.13.ebuild: