@@ -13,9 +13,11 @@ DIST glib-1.2.10.tar.gz 421480 RMD160 f19efe8c87ebeea979a4d36902d8a8209640cd95 S
 DIST glib-2.12.12.tar.bz2 2938743 RMD160 bab462a1e4ef3e9905a4af5b727ad4f9ca03cf02 SHA1 527bced2e6d38169c08c8712d5e3b6ebb0dc46b5 SHA256 debc507172093ef7c74e8a83bf49e090cc24057b1807d3be22e5d7cbfab60054
 DIST glib-2.12.13.tar.bz2 2938164 RMD160 0d13e73cb2173e7d63ce188fdb77746cca3b04d6 SHA1 81ce0e53f5583be970623d12523c785a392647bf SHA256 1253d563ca2e50292d924849fe3a23c3b7bc707ab8b79bda19319f9d192b0e8e
 DIST glib-2.14.3.tar.bz2 3339169 RMD160 d66ec2f7bf8e9fe1ab9e0191b55f46f9b711ca4c SHA1 3aef290ceaf17379b2fe24d8fdfb5ce6755d5f25 SHA256 9aab688e48771f49072ba5b483d17d9275959db404d623452fa36b85cd776993
+DIST glib-2.14.4.tar.bz2 3350956 RMD160 c8bf528187a9ed90fb66ec5c89b17500f03ccef6 SHA1 29f5d74ab83c36f98e86f560b993fce5ac60dedf SHA256 10e6ebecc2cbd07f193a5d26b88c3bf2107e32b2a4d024f10f77f59a98d579ff
 EBUILD glib-1.2.10-r5.ebuild 1742 RMD160 8ed5f983878e05ad2740f369c4dcaeeba0ad7caf SHA1 fb9982fb4fffb7fd6efb85e083ecd4e5cfc6343a SHA256 082aec36fe3694612f7b378f506f27946d29fa6c962d812814afb98a96f0e6f6
 EBUILD glib-2.12.12.ebuild 2544 RMD160 c9ee46626cbdc6782846bd560a3ff1628c609be2 SHA1 641ac63837caf2dec50a792791b7eacba33e90e4 SHA256 7bdd61ee3e051226b623c85d32080d1032587c97656ca569dbd53b8b30949d64
 EBUILD glib-2.12.13.ebuild 2552 RMD160 27c0b6583c4ff1f0c7b5f7ae4a3c12509e20d6ce SHA1 95377943990f462edaf2f044a990696afe26b90f SHA256 6f61bbf53147ba8ffd2c92939594d176ec3d2e0201a92f06b5b0d79fbb8ced00
 EBUILD glib-2.14.3.ebuild 2442 RMD160 0d72bfd47e800fcdd03f58960cc302aac2163131 SHA1 a2e236a678af48ab20f9af190070c8c1c497b79f SHA256 a07ae9b22e4b57210c65c7485f5b2566e0332066efde8206bcba7405ef463118
-MISC ChangeLog 34774 RMD160 67be17f9dfeca3cf080772a9776661208879f271 SHA1 d7d729941aa157538ef20287d21549d15672c92b SHA256 4ba5c527ee0906c26165f8afd1977e3b8348d2fab7c64664936330fd8020552a
+EBUILD glib-2.14.4.ebuild 2442 RMD160 3bf455a8c259e1a8ec0e4264cf9704bcb2f0e8b5 SHA1 3df2d67aa778e3663cfcd791c0659013c46b782e SHA256 86cf06d58bd0cd29e3601ccc891627349bca27463442145525ffc3d1e7a40068
+MISC ChangeLog 34922 RMD160 e7e92e3191384a6aaef1677cc2cffdc652b77581 SHA1 49a211666f927f0ba855841032c4a187fe0b1757 SHA256 a036542d2c37cd97f9a76c0bf88b3e442174f10e2ed6f3333156836bb4064a4f
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
