@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/glib
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.296 2007/11/23 17:48:30 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.297 2007/11/25 15:03:01 leio Exp $
+
+*glib-2.14.4 (25 Nov 2007)
+
+  25 Nov 2007; Mart Raudsepp <leio@gentoo.org> +glib-2.14.4.ebuild:
+  Version bump for various non-critical bug fixes
 
   23 Nov 2007; Jeroen Roovers <jer@gentoo.org> glib-2.14.3.ebuild:
   Stable for HPPA (bug #198845).
